; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_vce.c_radeon_vce_free_handles.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_radeon_vce.c_radeon_vce_free_handles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32*, %struct.drm_file** }
%struct.drm_file = type { i32 }

@RADEON_MAX_VCE_HANDLES = common dso_local global i32 0, align 4
@TN_RING_TYPE_VCE1_INDEX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Error destroying VCE handle (%d)!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @radeon_vce_free_handles(%struct.radeon_device* %0, %struct.drm_file* %1) #0 {
  %3 = alloca %struct.radeon_device*, align 8
  %4 = alloca %struct.drm_file*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %3, align 8
  store %struct.drm_file* %1, %struct.drm_file** %4, align 8
  store i32 0, i32* %5, align 4
  br label %8

8:                                                ; preds = %63, %2
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @RADEON_MAX_VCE_HANDLES, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %66

12:                                               ; preds = %8
  %13 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %14 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = call i32 @atomic_read(i32* %19)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %34

23:                                               ; preds = %12
  %24 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %25 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  %27 = load %struct.drm_file**, %struct.drm_file*** %26, align 8
  %28 = load i32, i32* %5, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds %struct.drm_file*, %struct.drm_file** %27, i64 %29
  %31 = load %struct.drm_file*, %struct.drm_file** %30, align 8
  %32 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %33 = icmp ne %struct.drm_file* %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %23, %12
  br label %63

35:                                               ; preds = %23
  %36 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %37 = call i32 @radeon_vce_note_usage(%struct.radeon_device* %36)
  %38 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %39 = load i32, i32* @TN_RING_TYPE_VCE1_INDEX, align 4
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @radeon_vce_get_destroy_msg(%struct.radeon_device* %38, i32 %39, i32 %40, i32* null)
  store i32 %41, i32* %6, align 4
  %42 = load i32, i32* %6, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %47

44:                                               ; preds = %35
  %45 = load i32, i32* %6, align 4
  %46 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %45)
  br label %47

47:                                               ; preds = %44, %35
  %48 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %49 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 1
  %51 = load %struct.drm_file**, %struct.drm_file*** %50, align 8
  %52 = load i32, i32* %5, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds %struct.drm_file*, %struct.drm_file** %51, i64 %53
  store %struct.drm_file* null, %struct.drm_file** %54, align 8
  %55 = load %struct.radeon_device*, %struct.radeon_device** %3, align 8
  %56 = getelementptr inbounds %struct.radeon_device, %struct.radeon_device* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  %59 = load i32, i32* %5, align 4
  %60 = sext i32 %59 to i64
  %61 = getelementptr inbounds i32, i32* %58, i64 %60
  %62 = call i32 @atomic_set(i32* %61, i32 0)
  br label %63

63:                                               ; preds = %47, %34
  %64 = load i32, i32* %5, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %5, align 4
  br label %8

66:                                               ; preds = %8
  ret void
}

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @radeon_vce_note_usage(%struct.radeon_device*) #1

declare dso_local i32 @radeon_vce_get_destroy_msg(%struct.radeon_device*, i32, i32, i32*) #1

declare dso_local i32 @DRM_ERROR(i8*, i32) #1

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
